fixed the gap between columns

--- a/assets/CSS/media-query.css
+++ b/assets/CSS/media-query.css
@@ -30,7 +30,7 @@
   }
 
   .top-story {
-    max-height: 500px;
+    max-height: 450px;
   }
 
   .heroes {
